fix: 🐛 main menu overflow

--- a/src/styles/main-menu-view.css
+++ b/src/styles/main-menu-view.css
@@ -1,5 +1,5 @@
 .background-player-wrapper {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -75,10 +75,12 @@
     left: 0;
     bottom: 0;
     right: 0;
+    max-width: 100vw;
+    max-height: 100vh;
     background: rgba(11, 11, 11, 0.9);
     padding: 2rem;
     padding-bottom: 6rem;
-    overflow-y: auto;
+    overflow-y: scroll;
     font-size: 1.25rem;
     opacity: 1;
 }
